# ShaderPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Actor.h  Camera.cpp  Camera.h  Descriptors.cpp  Descriptors.h  Initializers.cpp  Initializers.h  Loader.cpp  Loader.h  PipelineBuilder.cpp  PipelineBuilder.h  Renderer.cpp  Renderer.h  Types.h  Utilities.cpp  Utilities.h  VmaUsage.cpp  main.cpp
src/shaders/: colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient.spv  gradient_color.comp  gradient_color.spv  grid.comp  grid.spv  sky.comp  sky.spv  stripes.comp  stripes.spv
